add: erc-1056実装を追加

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,12 @@ ZERODEV_RPC=
 #ERC-20トークンアドレス
 TOKEN_CONTRACT_ADDRESS=
 SEPOLIA_RPC_URL=
+DID_REGISTRY_CONTRACT_ADDRESS=
+DID_CHAIN_NAME=
+DID_CHAIN_ID=
+DID_DEFAULT_VALIDITY_SECONDS=
+DID_SERVICE_ATTRIBUTE_PREFIX=
+DID_PUBLIC_KEY_ATTRIBUTE_PREFIX=
 
 # サーバーポート設定（オプション）
 PORT=3000
