--- a/package.json
+++ b/package.json
@@ -29,6 +29,12 @@
     "@prisma/client": "6.7.0",
     "@zerodev/ecdsa-validator": "5.4.8",
     "@zerodev/sdk": "5.4.30",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
+    "did-resolver": "^4.1.0",
+    "ethers": "^6.14.3",
+    "ethr-did": "^3.0.37",
+    "ethr-did-resolver": "^11.0.3",
     "mongoose": "^7.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
